week6/Jan-Terraform-ecs/sg.tf
# 3 security groups

# ALB SG
resource "aws_security_group" "alb" {
  name        = "${var.prefix}-${var.app_name}-alb-sg"
  description = "security group for ALB"
  vpc_id      = aws_vpc.main.id 

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

# ECS SG
resource "aws_security_group" "ecs" {
  name        = "${var.prefix}-${var.app_name}-ecs-sg"
  description = "security group for ECS tasks"
  vpc_id      = aws_vpc.main.id 

    ingress {
        from_port   = var.container_port
        to_port     = var.container_port
        protocol    = "tcp"
        security_groups = [aws_security_group.alb.id]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}


# RDS SG
resource "aws_security_group" "rds" {
  name        = "${var.prefix}-${var.app_name}-rds-sg"
  description = "security group for RDS instance"
  vpc_id      = aws_vpc.main.id

    ingress {
        from_port   = 5432
        to_port     = 5432
        protocol    = "tcp"
        security_groups = [aws_security_group.ecs.id]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
